// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C {}
// XYZXYZ
export default class {
  array = [];
  num = 1;
}

=====================================output=====================================
// @flow

class C {}
// XYZXYZ
export default class {
  array = [];
  num = 1;
}

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C {
  m() {
    return 1;
  }
}
module.exports = C;

=====================================output=====================================
// @flow

class C {
  m() {
    return 1;
  }
}
module.exports = C;

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class A {
  f = (x: string) => x;
}

module.exports = {
  a: A,
  b: (x: string) => x,
};

=====================================output=====================================
// @flow

class A {
  f = (x: string) => x;
}

module.exports = {
  a: A,
  b: (x: string) => x,
};

================================================================================
`;
